--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<meta name="robots" content="index, follow"/>
 	<meta name="page-locale" content="id,en">
     <meta content="true" name="HandheldFriendly">
+	<meta name="google-site-verification" content="ce2O0xKTTrJ8EcEefIGWLBf439bqowTJgIOw0euXypc" />
     <meta content="width" name="MobileOptimized">
     <meta content="indonesian" name="language">
 	<meta content='#007fa0' name='theme-color'/>
