--- a/index.html
+++ b/index.html
@@ -173,11 +173,11 @@
 				<div class="col-md-8">
 					<div class="row logform">
 						<div class="col-xs-6">
-							<a href="https://bit.ly/3U0gzM1" target="_blank" rel="nofollow noreferrer"><span
+							<a href="https://bit.ly/3hbDpSp" target="_blank" rel="nofollow noreferrer"><span
 									class="tron-login">LOGIN</span></a>
 						</div>
 						<div class="col-xs-6">
-							<a href="https://bit.ly/3U0gzM1" target="_blank" rel="nofollow noreferrer"><span
+							<a href="https://bit.ly/3hbDpSp" target="_blank" rel="nofollow noreferrer"><span
 									class="tron-regis">DAFTAR</span></a>
 						</div>
 					</div>
@@ -185,7 +185,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-12 mt-3">
-					<a href="https://bit.ly/3U0gzM1" rel="nofollow noreferrer" target="_blank"
+					<a href="https://bit.ly/3hbDpSp" rel="nofollow noreferrer" target="_blank"
 						style="color:#fff"><button type="login" class="btn btn-daf">SBOBET SITUS JUDI BOLA RESMI 2022</a>
 				</div>
 			</div>
@@ -205,11 +205,11 @@
 				<div class="col-md-6 pt-3 p-0 acenter">
 					<div class="row">
 						<div class="col-xs-6">
-							<a href="https://bit.ly/3U0gzM1" rel="nofollow noopener" target="_blank"
+							<a href="https://bit.ly/3hbDpSp" rel="nofollow noopener" target="_blank"
 								title="SLOT ONLINE"><span class="tron">SLOT ONLINE</span></a>
 						</div>
 						<div class="col-xs-6">
-							<a href="https://bit.ly/3U0gzM1" rel="nofollow noopener" target="_blank"
+							<a href="https://bit.ly/3hbDpSp" rel="nofollow noopener" target="_blank"
 								title="POKER ONLINE"><span class="tron">POKER ONLINE</span></a>
 						</div>
 					</div>
@@ -218,11 +218,11 @@
 				<div class="col-md-6 pt-3 p-0 acenter">
 					<div class="row">
 						<div class="col-xs-6">
-							<a href="https://bit.ly/3U0gzM1" rel="nofollow noopener" target="_blank"
+							<a href="https://bit.ly/3hbDpSp" rel="nofollow noopener" target="_blank"
 								title="SLOT ONLINE"><span class="tron">TOGEL ONLINE</span></a>
 						</div>
 						<div class="col-xs-6">
-							<a href="https://bit.ly/3U0gzM1" rel="nofollow noopener" target="_blank"
+							<a href="https://bit.ly/3hbDpSp" rel="nofollow noopener" target="_blank"
 								title="TOGEL ONLINE" class="spacer"><span class="tron">SLOT GACOR</span></a>
 						</div>
 					</div>
@@ -760,29 +760,29 @@
 				</div>
 			</div>
 			<div class="fixed-footer">
-				<a href="https://bit.ly/3U0gzM1" rel="nofollow noopener" target="_blank" class="wobble">
+				<a href="https://bit.ly/3hbDpSp" rel="nofollow noopener" target="_blank" class="wobble">
 					<amp-img layout="intrinsic" height="75" width="75"
 						src="https://i.postimg.cc/50JyCsxf/icon-apk-1.png" alt="Download APK Situs Sbobet"></amp-img>
 					Download
 				</a>
-				<a href="https://bit.ly/3U0gzM1" rel="nofollow noopener" target="_blank">
+				<a href="https://bit.ly/3hbDpSp" rel="nofollow noopener" target="_blank">
 					<amp-img layout="intrinsic" height="75" width="75" src="https://i.ibb.co/5RGFQDk/bonus-mqwb4s-1.png"
 						alt="Bonus Promo Sbobet"></amp-img>
 					Bonus
 				</a>
-				<a href="https://bit.ly/3U0gzM1" rel="nofollow noopener" target="_blank" class="tada">
+				<a href="https://bit.ly/3hbDpSp" rel="nofollow noopener" target="_blank" class="tada">
 					<amp-img class="center" layout="intrinsic" height="50" width="50"
 						src="https://i.postimg.cc/rynyVVtV/icon-login-slot.png" alt="Daftar Sbobet">
 					</amp-img>
 					Daftar
 				</a>
-				<a href="https://rebrand.ly/WA_PONDOK777"
+				<a href="https://bit.ly/3hbDpSp"
 					rel="nofollow noopener" target="_blank">
 					<amp-img layout="intrinsic" height="75" width="75" src="https://i.postimg.cc/YSzkJMHw/icon-wa.png"
 						alt="whatsapp"></amp-img>
 					Whatsapp
 				</a>
-				<a href="https://direct.lc.chat/13260753/"
+				<a href="https://bit.ly/3hbDpSp"
 					rel="nofollow noopener" target="_blank" class="js_live_chat_link live-chat-link">
 					<amp-img class="live-chat-icon" layout="intrinsic" height="75" width="75"
 						src="https://i.postimg.cc/50tcTzgw/icon-live-chat.png" alt="Live Chat"></amp-img>
