--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
     <title>403 Forbidden</title>
+    <meta name="google-site-verification" content="piaSU1bkmoiQKRLPJDr-UYvB8cb0S3EkpRH6yI-y3kY" />
     <style>
         html,body{
     margin:0;
